--- a/model/templates/model/index.html
+++ b/model/templates/model/index.html
@@ -280,7 +280,7 @@
                 
                 {{reg.message}}
               </div>
-              <div class="text-center"><button id="myBtn" type="submit" class="btn btn-primary" style="size: 50px;width: 10%;font-size: 20px;">submit</button></div>
+              <div class="text-center"><button id="myBtn" type="submit" class="btn btn-primary" style="size: 50px;font-size: 20px;">submit</button></div>
             </form>
 
           </div>
