--- a/model/templates/model/index.html
+++ b/model/templates/model/index.html
@@ -350,7 +350,7 @@
           }]
         },
         legend:{
-          display:true,
+          display:false,
           position:'right',
           labels:{
             fontColor:'#000'
