--- a/model/templates/model/index.html
+++ b/model/templates/model/index.html
@@ -109,7 +109,7 @@
 
             <div class="row" style="padding: 1%;">
               <div class="col"><h2>Recipient Gets</h2></div>
-              <div class="col"><h2>{{Recipient_inr}} INR </h2></div>
+              <div class="col"><h2>{{Recipient_inr}} INR ({{Recipient}} $) </h2></div>
             </div>
             <div class="row" style="padding: 1%;">
               <div class="col"><h2>Total fees</h2></div>
